tests/fixtures/negative/005_duplicate_else.js
// Expected error: duplicate else clause
if (x) {} else {} else {}
